apps/o11y/victoria-metrics/victoria-metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: victoria-metrics
  namespace: o11y
  labels:
    app: victoria-metrics
spec:
  selector:
    app: victoria-metrics
  ports:
    - port: 8428
      targetPort: 8428
      name: http
  type: ClusterIP
